--- a/client/css/main.css
+++ b/client/css/main.css
@@ -104,3 +104,34 @@ a:hover {
   margin-top: 35px; }
   .secondaryHeader h4 {
     margin-left: 20px; }
+
+.purchasesHeader {
+  margin: 20px; }
+
+.secondaryPurchaseHeader {
+  margin: 25px 0 0 20px; }
+
+.addContainer {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 40%;
+  padding: 20px; }
+  .addContainer button {
+    margin-top: 20px; }
+  .addContainer .form-control {
+    margin: 0 0 10px 0; }
+
+.totalPurchases {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 40%;
+  padding: 20px;
+  margin-left: 75px;
+  min-height: 300px;
+  text-align: center; }
+  .totalPurchases h2 {
+    margin: 20px; }
+
+.addAndTotal {
+  margin: 20px; }
+
+.purchaseContainer .purchaseCard {
+  min-height: 350px; }
