--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -1,128 +1,86 @@
-<h1>Purchases</h1>
-
-<div class="addContainer">
-    <section class="addPurchaseForm">
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">Occasion:</label>
-            <select class="form-control" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
-                <option value="">Select...</option>
-                <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
-            </select>
-        </div>
-        <div class="purchaseInputField">
-            Name:
-            <input type="text" class="form-control" ng-model="purchase.name">
-        </div>
-        <div class="purchaseInputField">
-            Recipient:
-            <input type="text" class="form-control" ng-model="purchase.recipient">
-        </div>
-        <div class="purchaseInputField">
-            Price:
-            <input type="text" class="form-control" ng-model="purchase.price">
-        </div>
-        <div class="purchaseInputField">
-            Description:
-            <input type="text" class="form-control" ng-model="purchase.description">
-        </div>
-        <button type="button" class="btn btn-secondary" ng-click="addPurchase(purchase)">TRACK</button>
-    </section>
+<div class="purchasesHeader">
+    <h1>Track Any Purchase!</h1>
 </div>
+<div class="purchaseContainer">
+    <div class="addAndTotal d-flex flex-row align-items-center">
+        <div class="addContainer">
+            <section class="addPurchaseForm">
+                <div class="form-group">
+                    <label for="exampleFormControlSelect1">Occasion:</label>
+                    <select class="form-control" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
+                        <option value="">Select...</option>
+                        <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
+                    </select>
+                </div>
+                <div class="purchaseInputField">
+                    Name:
+                    <input type="text" class="form-control" ng-model="purchase.name">
+                </div>
+                <div class="purchaseInputField">
+                    Recipient:
+                    <input type="text" class="form-control" ng-model="purchase.recipient">
+                </div>
+                <div class="purchaseInputField">
+                    Price:
+                    <input type="text" class="form-control" ng-model="purchase.price">
+                </div>
+                <div class="purchaseInputField">
+                    Description:
+                    <input type="text" class="form-control" ng-model="purchase.description">
+                </div>
+                <button type="button" class="btn btn-secondary" ng-click="addPurchase(purchase)">TRACK</button>
+            </section>
+        </div>
+        <div class="totalPurchases">
+            <h2><strong>Total Amount Spent On Purchases</strong></h2>
+            <h2>${{total}}</h2>
+        </div>
+    </div>
+    <div class="secondaryPurchaseHeader">
+        <h4>All Purchases</h4>
+    </div>
 
-<div class="purchasesContainer">
-    <div class="purchaseCard" ng-repeat="purchase in purchaseList">
-        <div ng-switch="purchaseEditMode">
-            <div>
-                <h4 ng-if="!purchase.edit">{{purchase.Occasion.title}}</h4>
-                <select class="form-control" ng-if="purchase.edit" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
-                    <option value="">Select...</option>
-                    <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
-                </select>
-            </div>
-            <div>
-                <h6>Gift Purchased For:</h6>
-                <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
-                <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
-            </div>
+    <div class="purchasesContainer d-flex flex-row flex-wrap">
+        <div class="purchaseCard" ng-repeat="purchase in purchaseList">
+            <div ng-switch="purchaseEditMode">
+                <div>
+                    <h4 ng-if="!purchase.edit">{{purchase.Occasion.title}}</h4>
+                    <select class="form-control" ng-if="purchase.edit" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
+                        <option value="">Select...</option>
+                        <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
+                    </select>
+                </div>
+                <div>
+                    <h6><strong>Purchased For</strong></h6> 
+                    <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
+                    <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
+                </div>
 
-            <div>
-                <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.name" ng-value="purchase.name">
-                <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
-            </div>
+                <div>
+                    <h6><strong>Gift</strong></h6>
+                    <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.name" ng-value="purchase.name">
+                    <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
+                </div>
 
-            <div>
-                <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.description" ng-value="purchase.description">
-                <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
-            </div>
+                <div>
+                    <h6><strong>Description</strong></h6>
+                    <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.description" ng-value="purchase.description">
+                    <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
+                </div>
 
-            <div>
-                <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.price" ng-value="purchase.price">
-                <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
-            </div>
+                <div>
+                    <h6><strong>Price</strong></h6>
+                    <input type="text" class="form-control" ng-if="purchase.edit" id="edit" ng-model="purchase.price" ng-value="purchase.price">
+                    <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
+                </div>
 
-            <div class="occasionButtons">
-                <button type="button" class="btn btn-secondary btn-sm" ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
-                <button type="button" class="btn btn-danger btn-sm" ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
-                <button type="button" class="btn btn-secondary btn-sm" ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
-                <button type="button" class="btn btn-light btn-sm" ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+                <div class="occasionButtons">
+                    <button type="button" class="btn btn-secondary btn-sm" ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
+                    <button type="button" class="btn btn-danger btn-sm" ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
+                    <button type="button" class="btn btn-secondary btn-sm" ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
+                    <button type="button" class="btn btn-light btn-sm" ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-<!-- MODAL -->
-<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    ADD PURCHASE
-</button>
-
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add Purchase</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <section class="addPurchaseForm">
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect1">Occasion:</label>
-                        <select class="form-control" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
-                            <option value="">Select...</option>
-                            <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
-                        </select>
-                    </div>
-                    <div class="purchaseInputField">
-                        Name:
-                        <input type="text" ng-model="purchase.name">
-                    </div>
-                    <div class="purchaseInputField">
-                        Recipient:
-                        <input type="text" ng-model="purchase.recipient">
-                    </div>
-                    <div class="purchaseInputField">
-                        Price:
-                        <input type="text" ng-model="purchase.price">
-                    </div>
-                    <div class="purchaseInputField">
-                        Description:
-                        <input type="text" ng-model="purchase.description">
-                    </div>
-                    <!-- <button ng-click="addPurchase(purchase)">TRACK</button> -->
-<!-- </section>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="addPurchase(purchase)">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>  -->
