--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -86,8 +86,6 @@ a:hover {
     margin: 20px 0 20px 0;
 }
 
-.individualOccasionContainer {
-}
 .individualOccasionCard {
     strong {
         text-decoration: underline;
@@ -144,8 +142,50 @@ a:hover {
 
 .secondaryHeader {
     margin-top: 35px;
-    // margin-bottom: 25px;
     h4 {
         margin-left: 20px;
+    }
+}
+
+//////////////////////// PURCHASES ////////////////////////////
+.purchasesHeader {
+    margin: 20px;
+}
+
+.secondaryPurchaseHeader {
+    margin: 25px 0 0 20px;
+}
+
+.addContainer {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 40%;
+    padding: 20px;
+    // margin: 20px;
+    button {
+        margin-top: 20px;
+    }
+    .form-control {
+        margin: 0 0 10px 0;
+    }
+}
+
+.totalPurchases {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 40%;
+    padding: 20px;
+    margin-left: 75px;
+    min-height: 300px;
+    text-align: center;
+    h2 {
+        margin: 20px;
+    }
+}
+
+.addAndTotal {
+    margin: 20px;
+}
+.purchaseContainer {
+    .purchaseCard {
+        min-height: 350px;
     }
 }
